<resources>
    <string name="app_name">GeoQuiz</string>

    <!--<string
        name="hello_world">Hello, world!</string>-->

    <!--<string name="question_text">Constantinople is the largest city in Turkey.</string> brauchen wir jetzt nicht mehr-->

    <string name="true_button">True</string>

    <string name="false_button">False</string>

    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>

    <string name="correct_toast">Correct!</string>

    <string name="incorrect_toast">Incorrect :(</string>

    <string name="menu_settings">Settings</string>

    <string name="number_correct">Number of correct answers: </string>

    <string name="cheats_left">Number of left cheats: </string>


    <!-- Fragen -->
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt</string>
    <string name="question_americas">The Amazon River is the longest rin the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest an freshwater lake.</string>
    <string name="question_turkey">Constantinople is the largest city in Turkey.</string>


    <!-- Cheat -->
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong</string>


</resources>
