<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.geoquiz.QuizActivity">

    <TextView
        android:layout_width="312dp"
        android:layout_height="97dp"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="92dp"
        android:id="@+id/question_text_view"
        android:layout_marginLeft="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="65dp"
        tools:layout_editor_absoluteX="37dp" />
    <!--android:text="@string/question_text"  gehoerte urspruenglich noch zu textview-->

    <Button
        android:id="@+id/true_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/true_button"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/question_text_view"
        app:layout_constraintRight_toLeftOf="@+id/false_button"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.373" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/false_button"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/question_text_view"
        android:layout_marginRight="35dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:layout_marginRight="35dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="96dp"
        app:layout_constraintTop_toBottomOf="@+id/false_button"
        app:layout_constraintLeft_toRightOf="@+id/previous_button"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_button"
        android:layout_marginLeft="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="96dp"
        app:layout_constraintTop_toBottomOf="@+id/true_button" />

    <TextView
        android:id="@+id/number_correct"
        android:layout_width="311dp"
        android:layout_height="41dp"
        android:text="@string/number_correct"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/question_text_view"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/question_text_view"
        app:layout_constraintLeft_toRightOf="@+id/true_button"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/false_button"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.484" />

    <TextView
        android:id="@+id/cheats_left_text_view"
        android:layout_width="312dp"
        android:layout_height="42dp"
        android:text="@string/cheats_left"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/cheat_button"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>



